Added Search Page on Front-End
 - Implemented search page and back-end endpoint for corresponding feature.

 - Countdown implementation slight change for better overriding within other components.

 - Removed NoPage Page, its implementation was added to ErrorPage.

 - Added 'notistack' for better notifications placement.

 - Added common.ts file with commonly used functions, types, etc.
